[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Generate the required lock file before validation:
#   uv lock

[project]
name = "smart-internship-env"
version = "0.1.0"
description = "OpenEnv environment for internship recommendation and ranking"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name="Sathvik", email="sathvikdantu45@gmail.com" }
]
dependencies = [
    "pydantic",
    "openai",
    "python-dotenv",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]